--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "swagger": "node_modules/.bin/ng-swagger-gen -i swagger.json -o src/app/api/moneyme"
+    "swagger": "ng-openapi-gen --input swagger.json --output ./src/app/api"
   },
   "private": true,
   "dependencies": {
